# ios_sol

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  package.json  run.bat
crates/ios-app/: package-lock.json  package.json
crates/ios-app/src/: App.css  App.tsx  MwaRequestSheet.tsx  NFTGallery.tsx  PinPad.tsx
crates/ios-app/src-tauri/: Cargo.toml  tauri.conf.json
crates/ios-app/src-tauri/src/: biometric_vault.rs  lib.rs  main.rs  mwa_deep_link.rs  mwa_server.rs
crates/ios-app/src/hooks/: useMwaListener.ts
crates/wallet-core/: Cargo.toml
crates/wallet-core/src/: account.rs  crypto.rs  error.rs  lib.rs  mnemonic.rs  mwa.rs  network.rs  nft.rs  transaction.rs
crates/wallet-core/tests/: integration_tests.rs
test-dapp/: package.json  simulate_dapp.mjs
