[package]
name = "wallet-core"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "1.18.11"
solana-client = "1.18.11"
solana-account-decoder = "1.18.11"
tokio = { version = "1.43.0", features = ["full"] }
bip39 = { version = "2.2.2", features = ["rand"] }
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.140"
rand = "0.8.5"
argon2 = "0.5.3"
aes-gcm = "0.10.3"
base64 = "0.22.1"
zeroize = "1.3.0"
thiserror = "1.0.61"
bincode = "1.3"
hex = "0.4"

# NFT support: SPL token filter + manual Metaplex PDA derivation
# We derive the metadata PDA manually (seeds: "metadata" + program_id + mint)
# instead of importing mpl-token-metadata which causes zeroize conflicts
spl-token = { version = "4", features = ["no-entrypoint"] }

# HTTP for off-chain NFT JSON metadata + cNFT DAS queries
reqwest = { version = "0.12", features = ["json", "blocking"] }

# MWA session types (AES-GCM encrypt/decrypt, no ECDH here)
futures-util = "0.3"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["full", "test-util"] }
