[package]
name = "ios-app"
version = "0.1.0"
description = "XFHotWallet — Solana iOS Wallet"
authors = ["you"]
edition = "2021"

[lib]
name = "ios_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.2.3", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["full"] }
wallet-core = { path = "../../wallet-core" }
solana-sdk = "1.18.11"
solana-client = "1.18.11"
bincode = "1.3"
log = "0.4"
percent-encoding = "2"
url = "2"

# Tauri mobile biometric plugin (mobile only, compile-guards in code)
tauri-plugin-biometric = "2"
# tauri-plugin-stronghold = { version = "2", features = ["kdf"] }

# Deep link plugin for iOS MWA solana-wallet:// scheme
tauri-plugin-deep-link = "2"

# WebSocket for MWA server on localhost:44444
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# MWA ECDH P-256 session encryption via ring (no zeroize conflict)
ring = "0.17"
base64 = "0.22.1"
rand = "0.8.5"
anyhow = "1.0.102"
thiserror = "1.0.61"
hex = "0.4"
sha2 = "0.10"
hkdf = "0.12"
